# taxi_demand

./: .gitignore  README.md  pyproject.toml
data/transformed/: ts_data_2025_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb
src/: data.py  plot.py
